Add String for textView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,20 @@
     </string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_main_live">MainActivityLive</string>
+    <string name="go_amp_live"><![CDATA[GO & Live]]></string>
+    <string name="powerdby_rushabh_shah">PowerdBy Rushabh Shah</string>
+    <string name="teamA">SPAIN</string>
+    <string name="TeamB">BRAZIL</string>
+    <string name="teamAGoal">3</string>
+    <string name="TeamBGoal">4</string>
+    <string name="team_a">TEAM A</string>
+    <string name="team_2">TEAM 2</string>
+    <string name="title">Todays FIFA World Cup Final Match</string>
+    <string name="add_goal">Add Goal</string>
+    <string name="minus_goal">Minus Goal</string>
+    <string name="_2_goal">2 Goal</string>
+    <string name="_3_goal">3 Goal</string>
+    <string name="_4_goal">4 Goal</string>
+    <string name="_5_goal">5 Goal</string>
+    <string name="difference">-</string>
 </resources>
