-Added Style for TextView in themes.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,6 @@
     <string name="_4_goal">4 Goal</string>
     <string name="_5_goal">5 Goal</string>
     <string name="difference">-</string>
+    <string name="_3">3</string>
+    <string name="_4">4</string>
 </resources>
