-Added button shape background rounded_rectangle_button.xml - Changes in layouts and Strings name - Enable/Disable Dark mode functionality added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="difference">-</string>
     <string name="_3">3</string>
     <string name="_4">4</string>
+    <string name="nightmode">Night Mode</string>
 </resources>
