--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="_3">3</string>
     <string name="_4">4</string>
     <string name="nightmode">Night Mode</string>
+    <string name="about">About</string>
 </resources>
